--- a/AES/latex/dir_abf2ae25d16ef0f6829631ecc557a529.tex
+++ b/AES/latex/dir_abf2ae25d16ef0f6829631ecc557a529.tex
@@ -7,4 +7,4 @@
 датотекa \hyperlink{aes_8c}{aes.\+c}
 \item 
 датотекa \hyperlink{aes_8h}{aes.\+h}
-\begin{DoxyCompactList}\small\item\em Фајл садржи функције за шифорвање датотека АЕС-\/ом. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Фајл садржи функције за шифорвање и дешфировање датотека АЕС-\/ом. \end{DoxyCompactList}\end{DoxyCompactItemize}
