--- a/AES/latex/aes_8c.tex
+++ b/AES/latex/aes_8c.tex
@@ -6,6 +6,7 @@
 {\ttfamily \#include $<$stdlib.\+h$>$}\\*
 {\ttfamily \#include $<$time.\+h$>$}\\*
 {\ttfamily \#include $<$string.\+h$>$}\\*
+{\ttfamily \#include $<$limits.\+h$>$}\\*
 \subsection*{Функције}
 \begin{DoxyCompactItemize}
 \item 
@@ -89,7 +90,7 @@ int \hyperlink{aes_8c_ae66f6b31b5ad750f1fe042a706a4e3d4}{main} ()
 \end{DoxyParams}
 
 
-Дефиниција у линији 16 датотеке aes.\+c.
+Дефиниција у линији 17 датотеке aes.\+c.
 
 \hypertarget{aes_8c_afd7182b209f6bdecd24beaea1a6517aa}{\index{aes.\+c@{aes.\+c}!C\+R\+C32@{C\+R\+C32}}
 \index{C\+R\+C32@{C\+R\+C32}!aes.\+c@{aes.\+c}}
@@ -121,7 +122,7 @@ crc = \hyperlink{aes_8c_afd7182b209f6bdecd24beaea1a6517aa}{CRC32}(crc, state); \
 \end{DoxyReturn}
 
 
-Дефиниција у линији 611 датотеке aes.\+c.
+Дефиниција у линији 627 датотеке aes.\+c.
 
 \hypertarget{aes_8c_ac8533f426828343402334bddbd5c2fd6}{\index{aes.\+c@{aes.\+c}!C\+R\+C\+Check@{C\+R\+C\+Check}}
 \index{C\+R\+C\+Check@{C\+R\+C\+Check}!aes.\+c@{aes.\+c}}
@@ -165,7 +166,7 @@ FILE *in = fopen(\textcolor{stringliteral}{"ulaz.in.crypt"}, \textcolor{stringli
 \end{DoxySeeAlso}
 
 
-Дефиниција у линији 623 датотеке aes.\+c.
+Дефиниција у линији 639 датотеке aes.\+c.
 
 \hypertarget{aes_8c_aeef4c046e96aadbcf550393490956df5}{\index{aes.\+c@{aes.\+c}!Cypher\+A\+E\+S@{Cypher\+A\+E\+S}}
 \index{Cypher\+A\+E\+S@{Cypher\+A\+E\+S}!aes.\+c@{aes.\+c}}
@@ -210,7 +211,7 @@ strcpy(inputName, \textcolor{stringliteral}{"ulaz.in"});
 \end{DoxyWarning}
 
 
-Дефиниција у линији 690 датотеке aes.\+c.
+Дефиниција у линији 706 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a4f1ca53c57b6d7a4661e804b46e32556}{\index{aes.\+c@{aes.\+c}!Cypher\+File\+Name@{Cypher\+File\+Name}}
 \index{Cypher\+File\+Name@{Cypher\+File\+Name}!aes.\+c@{aes.\+c}}
@@ -223,7 +224,7 @@ strcpy(inputName, \textcolor{stringliteral}{"ulaz.in"});
 
 Прави име шифроване датотеке од имена датотеке који треба да шифрује 
 
-Додаје \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T} на крај имена шифроване датотеке {\ttfamily in\+File\+Name}. Ако је име датотеке које би се добило веће од максималне дужине имена датотеке коју {\ttfamily W\+I\+N\+D\+O\+W\+S} може да прими (\hyperlink{aes_8h_a3fd5ab5d380936ded4f6cbe6fe24dca8}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N}), на крај имена додаје \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T} преко онолико карактера колико треба да се дода \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T}, а да не пређе ограничење у {\ttfamily W\+I\+N\+D\+O\+W\+S}. 
+Додаје \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T} на крај имена шифроване датотеке {\ttfamily in\+File\+Name}. Ако је име путање које би се добило веће од максималне дужине имена путање коју {\ttfamily W\+I\+N\+D\+O\+W\+S} може да прими (\hyperlink{aes_8h_a263efd24d550124313df51247f07457a}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H}), на крај имена додаје \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T} преко онолико карактера колико треба да се дода \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T}, а да не пређе ограничење у {\ttfamily W\+I\+N\+D\+O\+W\+S}. 
 \begin{DoxyParams}{Параметри}
 {\em in\+File\+Name} & \mbox{[}in\mbox{]} Име улазне датотеке који се шифрује. \\
 \hline
@@ -239,7 +240,7 @@ t = \hyperlink{aes_8c_a4f1ca53c57b6d7a4661e804b46e32556}{CypherFileName}(t); \te
 \end{DoxyReturn}
 
 
-Дефиниција у линији 567 датотеке aes.\+c.
+Дефиниција у линији 568 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a04fa82fc5866faa97b820e9f610ac8a8}{\index{aes.\+c@{aes.\+c}!Decrypt\+State@{Decrypt\+State}}
 \index{Decrypt\+State@{Decrypt\+State}!aes.\+c@{aes.\+c}}
@@ -279,7 +280,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyWarning}
 
 
-Дефиниција у линији 440 датотеке aes.\+c.
+Дефиниција у линији 441 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a53000b729ca739f488c255eec26a83aa}{\index{aes.\+c@{aes.\+c}!Decypher\+A\+E\+S@{Decypher\+A\+E\+S}}
 \index{Decypher\+A\+E\+S@{Decypher\+A\+E\+S}!aes.\+c@{aes.\+c}}
@@ -325,7 +326,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyWarning}
 
 
-Дефиниција у линији 783 датотеке aes.\+c.
+Дефиниција у линији 795 датотеке aes.\+c.
 
 \hypertarget{aes_8c_af5e8e76552be6bdf6fc268e941e7d689}{\index{aes.\+c@{aes.\+c}!De\+Cypher\+File\+Name@{De\+Cypher\+File\+Name}}
 \index{De\+Cypher\+File\+Name@{De\+Cypher\+File\+Name}!aes.\+c@{aes.\+c}}
@@ -338,7 +339,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 
 Враћа име датотеке које ће имати након што се дешифрује. 
 
-Проверава да ли постоји датотека са истим именом као {\ttfamily $\ast$in\+File\+Name}. Ако постоји додаје насумичан број на почетак док дато име не буде постојало. Кад дужина имена са додатим насумичним бројем пређе дужину \hyperlink{aes_8h_a3fd5ab5d380936ded4f6cbe6fe24dca8}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N} додаје се број тако да се крај имена губи. {\ttfamily $\ast$in\+File\+Name} мора бити алоциран динамички. 
+Проверава да ли постоји датотека са истим именом као {\ttfamily $\ast$in\+File\+Name}. Ако постоји додаје насумичан број на почетак док дато име не буде постојало. Кад дужина путање до имена фајла са додатим насумичним бројем пређе дужину \hyperlink{aes_8h_a263efd24d550124313df51247f07457a}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H} додаје се број тако да се крај имена губи. {\ttfamily $\ast$in\+File\+Name} мора бити алоциран динамички. 
 \begin{DoxyParams}{Параметри}
 {\em in\+File\+Name} & \mbox{[}in/out\mbox{]} Име датотеке који се дешифрује. \\
 \hline
@@ -346,7 +347,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \begin{DoxyReturn}{Враћа}
 {\ttfamily 0} aко је све добро протекло.~\newline
  {\ttfamily 1} aко нема довољно меморије. ~\newline
- {\ttfamily 2} ако је првобитно прослеђено име веће од \hyperlink{aes_8h_a3fd5ab5d380936ded4f6cbe6fe24dca8}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N} 
+ {\ttfamily 2} ако је путања неисправна (предугачко име прослеђено). 
 \begin{DoxyCode}
 \hyperlink{aes_8h_a36fec739165651cfd8d4d9306f2a3996}{UChar} *t = (\hyperlink{aes_8h_a36fec739165651cfd8d4d9306f2a3996}{UChar}*)malloc(5);
 t[0] = \textcolor{charliteral}{'\(\backslash\)0'};
@@ -357,7 +358,7 @@ strcat(t, \textcolor{stringliteral}{"tata"});
 \end{DoxyReturn}
 
 
-Дефиниција у линији 585 датотеке aes.\+c.
+Дефиниција у линији 592 датотеке aes.\+c.
 
 \hypertarget{aes_8c_ad7bd04e37ce32485ba137a85d8af1967}{\index{aes.\+c@{aes.\+c}!Encrypt\+State@{Encrypt\+State}}
 \index{Encrypt\+State@{Encrypt\+State}!aes.\+c@{aes.\+c}}
@@ -397,7 +398,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyWarning}
 
 
-Дефиниција у линији 373 датотеке aes.\+c.
+Дефиниција у линији 374 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a663692ae0b5723e1f91a93fdd5e07f8e}{\index{aes.\+c@{aes.\+c}!Inv\+Mix\+Columns@{Inv\+Mix\+Columns}}
 \index{Inv\+Mix\+Columns@{Inv\+Mix\+Columns}!aes.\+c@{aes.\+c}}
@@ -423,7 +424,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyParams}
 
 
-Дефиниција у линији 234 датотеке aes.\+c.
+Дефиниција у линији 235 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a0691b569c9d38deff434ba3b259916f1}{\index{aes.\+c@{aes.\+c}!Inv\+Shift\+Rows@{Inv\+Shift\+Rows}}
 \index{Inv\+Shift\+Rows@{Inv\+Shift\+Rows}!aes.\+c@{aes.\+c}}
@@ -448,7 +449,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyParams}
 
 
-Дефиниција у линији 120 датотеке aes.\+c.
+Дефиниција у линији 121 датотеке aes.\+c.
 
 \hypertarget{aes_8c_aa116f5c396e0ac94147ee711e24906af}{\index{aes.\+c@{aes.\+c}!Inv\+Sub\+Bytes@{Inv\+Sub\+Bytes}}
 \index{Inv\+Sub\+Bytes@{Inv\+Sub\+Bytes}!aes.\+c@{aes.\+c}}
@@ -474,7 +475,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyParams}
 
 
-Дефиниција у линији 78 датотеке aes.\+c.
+Дефиниција у линији 79 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a2b40a4093b74b3da1d8209ea3c140020}{\index{aes.\+c@{aes.\+c}!Key\+Expansion@{Key\+Expansion}}
 \index{Key\+Expansion@{Key\+Expansion}!aes.\+c@{aes.\+c}}
@@ -511,7 +512,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyReturn}
 
 
-Дефиниција у линији 340 датотеке aes.\+c.
+Дефиниција у линији 341 датотеке aes.\+c.
 
 \hypertarget{aes_8c_ae66f6b31b5ad750f1fe042a706a4e3d4}{\index{aes.\+c@{aes.\+c}!main@{main}}
 \index{main@{main}!aes.\+c@{aes.\+c}}
@@ -522,7 +523,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 )}}\label{aes_8c_ae66f6b31b5ad750f1fe042a706a4e3d4}
 
 
-Дефиниција у линији 877 датотеке aes.\+c.
+Дефиниција у линији 886 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a390e2fa9bdb33429b8d8804a0cb53ce8}{\index{aes.\+c@{aes.\+c}!Mix\+Columns@{Mix\+Columns}}
 \index{Mix\+Columns@{Mix\+Columns}!aes.\+c@{aes.\+c}}
@@ -547,7 +548,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyParams}
 
 
-Дефиниција у линији 143 датотеке aes.\+c.
+Дефиниција у линији 144 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a43ffbb16820017200bc8c9ccfc867db9}{\index{aes.\+c@{aes.\+c}!Read\+Data@{Read\+Data}}
 \index{Read\+Data@{Read\+Data}!aes.\+c@{aes.\+c}}
@@ -585,7 +586,7 @@ printf(\textcolor{stringliteral}{"Greska pri citanju\(\backslash\)n"});
 \end{DoxyReturn}
 
 
-Дефиниција у линији 523 датотеке aes.\+c.
+Дефиниција у линији 524 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a8a54c67c2e95fd6481a810f0d8ba8099}{\index{aes.\+c@{aes.\+c}!Rot\+Word@{Rot\+Word}}
 \index{Rot\+Word@{Rot\+Word}!aes.\+c@{aes.\+c}}
@@ -610,7 +611,7 @@ RotWor(&t); \textcolor{comment}{// t = 0x0100;}
 \end{DoxyParams}
 
 
-Дефиниција у линији 322 датотеке aes.\+c.
+Дефиниција у линији 323 датотеке aes.\+c.
 
 \hypertarget{aes_8c_ab2370c8f7e2864610060a618e32e0a39}{\index{aes.\+c@{aes.\+c}!Shift\+Rows@{Shift\+Rows}}
 \index{Shift\+Rows@{Shift\+Rows}!aes.\+c@{aes.\+c}}
@@ -635,7 +636,7 @@ RotWor(&t); \textcolor{comment}{// t = 0x0100;}
 \end{DoxyParams}
 
 
-Дефиниција у линији 97 датотеке aes.\+c.
+Дефиниција у линији 98 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a18cf3834d6b4ccee85ac6a39617e0582}{\index{aes.\+c@{aes.\+c}!Size\+Of\+File@{Size\+Of\+File}}
 \index{Size\+Of\+File@{Size\+Of\+File}!aes.\+c@{aes.\+c}}
@@ -666,7 +667,7 @@ RotWor(&t); \textcolor{comment}{// t = 0x0100;}
 \end{DoxyWarning}
 
 
-Дефиниција у линији 505 датотеке aes.\+c.
+Дефиниција у линији 506 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a521be23a2bb2cc37ba145760644baf49}{\index{aes.\+c@{aes.\+c}!State\+To\+U\+Int32@{State\+To\+U\+Int32}}
 \index{State\+To\+U\+Int32@{State\+To\+U\+Int32}!aes.\+c@{aes.\+c}}
@@ -698,7 +699,7 @@ t = \hyperlink{aes_8c_a521be23a2bb2cc37ba145760644baf49}{StateToUInt32}(state) \
 \end{DoxyNote}
 
 
-Дефиниција у линији 556 датотеке aes.\+c.
+Дефиниција у линији 557 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a77529d2c93011d18f738a210783f3362}{\index{aes.\+c@{aes.\+c}!Sub\+Bytes@{Sub\+Bytes}}
 \index{Sub\+Bytes@{Sub\+Bytes}!aes.\+c@{aes.\+c}}
@@ -724,7 +725,7 @@ t = \hyperlink{aes_8c_a521be23a2bb2cc37ba145760644baf49}{StateToUInt32}(state) \
 \end{DoxyParams}
 
 
-Дефиниција у линији 59 датотеке aes.\+c.
+Дефиниција у линији 60 датотеке aes.\+c.
 
 \hypertarget{aes_8c_ae42b375b0183763e33ef62fb03c41f4d}{\index{aes.\+c@{aes.\+c}!Sub\+Word@{Sub\+Word}}
 \index{Sub\+Word@{Sub\+Word}!aes.\+c@{aes.\+c}}
@@ -752,7 +753,7 @@ t = \hyperlink{aes_8c_ae42b375b0183763e33ef62fb03c41f4d}{SubWord}(t); \textcolor
 \end{DoxyReturn}
 
 
-Дефиниција у линији 326 датотеке aes.\+c.
+Дефиниција у линији 327 датотеке aes.\+c.
 
 \hypertarget{aes_8c_a8b5f3e5be9ef9141f608ea5f455c9045}{\index{aes.\+c@{aes.\+c}!U\+Char\+To\+U\+Int32@{U\+Char\+To\+U\+Int32}}
 \index{U\+Char\+To\+U\+Int32@{U\+Char\+To\+U\+Int32}!aes.\+c@{aes.\+c}}
@@ -780,7 +781,7 @@ t = \hyperlink{aes_8c_ae42b375b0183763e33ef62fb03c41f4d}{SubWord}(t); \textcolor
 \end{DoxyReturn}
 
 
-Дефиниција у линији 7 датотеке aes.\+c.
+Дефиниција у линији 8 датотеке aes.\+c.
 
 \hypertarget{aes_8c_abf754619bec46c9248838027681ac7c0}{\index{aes.\+c@{aes.\+c}!U\+Int32\+To\+State@{U\+Int32\+To\+State}}
 \index{U\+Int32\+To\+State@{U\+Int32\+To\+State}!aes.\+c@{aes.\+c}}
@@ -812,7 +813,7 @@ t = \hyperlink{aes_8c_ae42b375b0183763e33ef62fb03c41f4d}{SubWord}(t); \textcolor
 \end{DoxyNote}
 
 
-Дефиниција у линији 548 датотеке aes.\+c.
+Дефиниција у линији 549 датотеке aes.\+c.
 
 \hypertarget{aes_8c_af85d6c7d108f3d11a373b45e4d17907c}{\index{aes.\+c@{aes.\+c}!Write\+Data@{Write\+Data}}
 \index{Write\+Data@{Write\+Data}!aes.\+c@{aes.\+c}}
@@ -846,5 +847,5 @@ printf(\textcolor{stringliteral}{"Greska pri pisanju\(\backslash\)n"});
 \end{DoxyReturn}
 
 
-Дефиниција у линији 541 датотеке aes.\+c.
+Дефиниција у линији 542 датотеке aes.\+c.
 
