--- a/AES/latex/aes_8h.tex
+++ b/AES/latex/aes_8h.tex
@@ -3,7 +3,7 @@
 }
 
 
-Фајл садржи функције за шифорвање датотека АЕС-\/ом.  
+Фајл садржи функције за шифорвање и дешфировање датотека АЕС-\/ом.  
 
 
 {\ttfamily \#include $<$stdio.\+h$>$}\\*
@@ -18,11 +18,11 @@
 \item 
 \#define \hyperlink{aes_8h_a7e3ce397037c8f4f14f7adc0b969b662}{S\+T\+A\+T\+E\+\_\+\+S\+I\+Z\+E}~16
 \item 
-\#define \hyperlink{aes_8h_a3fd5ab5d380936ded4f6cbe6fe24dca8}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N}~214
-\item 
 \#define \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T}~\char`\"{}.crypt\char`\"{}
 \item 
 \#define \hyperlink{aes_8h_ae5409047cf0fceba4481b7e06c842b10}{D\+I\+G\+I\+T\+\_\+\+N\+U\+M}~10
+\item 
+\#define \hyperlink{aes_8h_a263efd24d550124313df51247f07457a}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H}~260
 \end{DoxyCompactItemize}
 \subsection*{Дефиниције типова}
 \begin{DoxyCompactItemize}
@@ -98,7 +98,7 @@ const \hyperlink{aes_8h_ab6132671e695a54d5c39ed9ce1536087}{U\+Int32} \hyperlink{
 
 
 \subsection{Опширније}
-Фајл садржи функције за шифорвање датотека АЕС-\/ом. 
+Фајл садржи функције за шифорвање и дешфировање датотека АЕС-\/ом. 
 
 \begin{DoxyAuthor}{Аутор}
 Ђорђе Живановић 
@@ -129,21 +129,21 @@ const \hyperlink{aes_8h_ab6132671e695a54d5c39ed9ce1536087}{U\+Int32} \hyperlink{
 \subsubsection[{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T}]{\setlength{\rightskip}{0pt plus 5cm}\#define C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T~\char`\"{}.crypt\char`\"{}}}\label{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}
 Екстензија криптоване датотеке. 
 
-Дефиниција у линији 15 датотеке aes.\+h.
+Дефиниција у линији 14 датотеке aes.\+h.
 
 \hypertarget{aes_8h_ae5409047cf0fceba4481b7e06c842b10}{\index{aes.\+h@{aes.\+h}!D\+I\+G\+I\+T\+\_\+\+N\+U\+M@{D\+I\+G\+I\+T\+\_\+\+N\+U\+M}}
 \index{D\+I\+G\+I\+T\+\_\+\+N\+U\+M@{D\+I\+G\+I\+T\+\_\+\+N\+U\+M}!aes.\+h@{aes.\+h}}
 \subsubsection[{D\+I\+G\+I\+T\+\_\+\+N\+U\+M}]{\setlength{\rightskip}{0pt plus 5cm}\#define D\+I\+G\+I\+T\+\_\+\+N\+U\+M~10}}\label{aes_8h_ae5409047cf0fceba4481b7e06c842b10}
 Број цифара у декадном систему. 
 
+Дефиниција у линији 15 датотеке aes.\+h.
+
+\hypertarget{aes_8h_a263efd24d550124313df51247f07457a}{\index{aes.\+h@{aes.\+h}!M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H@{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H}}
+\index{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H@{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H}!aes.\+h@{aes.\+h}}
+\subsubsection[{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H}]{\setlength{\rightskip}{0pt plus 5cm}\#define M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H~260}}\label{aes_8h_a263efd24d550124313df51247f07457a}
+Максимална дужина путање у {\ttfamily W\+I\+N\+D\+O\+W\+S} 
+
 Дефиниција у линији 16 датотеке aes.\+h.
-
-\hypertarget{aes_8h_a3fd5ab5d380936ded4f6cbe6fe24dca8}{\index{aes.\+h@{aes.\+h}!M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N@{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N}}
-\index{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N@{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N}!aes.\+h@{aes.\+h}}
-\subsubsection[{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N}]{\setlength{\rightskip}{0pt plus 5cm}\#define M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N~214}}\label{aes_8h_a3fd5ab5d380936ded4f6cbe6fe24dca8}
-Максимална дужина имена датотеке у Windows-\/у 
-
-Дефиниција у линији 14 датотеке aes.\+h.
 
 \hypertarget{aes_8h_a43ff16ab6b9bd24602669bf844cc81f7}{\index{aes.\+h@{aes.\+h}!N\+U\+M\+\_\+\+R\+O\+W@{N\+U\+M\+\_\+\+R\+O\+W}}
 \index{N\+U\+M\+\_\+\+R\+O\+W@{N\+U\+M\+\_\+\+R\+O\+W}!aes.\+h@{aes.\+h}}
@@ -206,7 +206,7 @@ const \hyperlink{aes_8h_ab6132671e695a54d5c39ed9ce1536087}{U\+Int32} \hyperlink{
 \end{DoxyParams}
 
 
-Дефиниција у линији 16 датотеке aes.\+c.
+Дефиниција у линији 17 датотеке aes.\+c.
 
 \hypertarget{aes_8h_afd7182b209f6bdecd24beaea1a6517aa}{\index{aes.\+h@{aes.\+h}!C\+R\+C32@{C\+R\+C32}}
 \index{C\+R\+C32@{C\+R\+C32}!aes.\+h@{aes.\+h}}
@@ -238,7 +238,7 @@ crc = \hyperlink{aes_8c_afd7182b209f6bdecd24beaea1a6517aa}{CRC32}(crc, state); \
 \end{DoxyReturn}
 
 
-Дефиниција у линији 611 датотеке aes.\+c.
+Дефиниција у линији 627 датотеке aes.\+c.
 
 \hypertarget{aes_8h_ac8533f426828343402334bddbd5c2fd6}{\index{aes.\+h@{aes.\+h}!C\+R\+C\+Check@{C\+R\+C\+Check}}
 \index{C\+R\+C\+Check@{C\+R\+C\+Check}!aes.\+h@{aes.\+h}}
@@ -282,7 +282,7 @@ FILE *in = fopen(\textcolor{stringliteral}{"ulaz.in.crypt"}, \textcolor{stringli
 \end{DoxySeeAlso}
 
 
-Дефиниција у линији 623 датотеке aes.\+c.
+Дефиниција у линији 639 датотеке aes.\+c.
 
 \hypertarget{aes_8h_aeef4c046e96aadbcf550393490956df5}{\index{aes.\+h@{aes.\+h}!Cypher\+A\+E\+S@{Cypher\+A\+E\+S}}
 \index{Cypher\+A\+E\+S@{Cypher\+A\+E\+S}!aes.\+h@{aes.\+h}}
@@ -327,7 +327,7 @@ strcpy(inputName, \textcolor{stringliteral}{"ulaz.in"});
 \end{DoxyWarning}
 
 
-Дефиниција у линији 690 датотеке aes.\+c.
+Дефиниција у линији 706 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a4f1ca53c57b6d7a4661e804b46e32556}{\index{aes.\+h@{aes.\+h}!Cypher\+File\+Name@{Cypher\+File\+Name}}
 \index{Cypher\+File\+Name@{Cypher\+File\+Name}!aes.\+h@{aes.\+h}}
@@ -340,7 +340,7 @@ strcpy(inputName, \textcolor{stringliteral}{"ulaz.in"});
 
 Прави име шифроване датотеке од имена датотеке који треба да шифрује 
 
-Додаје \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T} на крај имена шифроване датотеке {\ttfamily in\+File\+Name}. Ако је име датотеке које би се добило веће од максималне дужине имена датотеке коју {\ttfamily W\+I\+N\+D\+O\+W\+S} може да прими (\hyperlink{aes_8h_a3fd5ab5d380936ded4f6cbe6fe24dca8}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N}), на крај имена додаје \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T} преко онолико карактера колико треба да се дода \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T}, а да не пређе ограничење у {\ttfamily W\+I\+N\+D\+O\+W\+S}. 
+Додаје \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T} на крај имена шифроване датотеке {\ttfamily in\+File\+Name}. Ако је име путање које би се добило веће од максималне дужине имена путање коју {\ttfamily W\+I\+N\+D\+O\+W\+S} може да прими (\hyperlink{aes_8h_a263efd24d550124313df51247f07457a}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H}), на крај имена додаје \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T} преко онолико карактера колико треба да се дода \hyperlink{aes_8h_ae4a1d7314e5a1620fe97baeab89a5102}{C\+R\+Y\+P\+T\+\_\+\+T\+E\+X\+T}, а да не пређе ограничење у {\ttfamily W\+I\+N\+D\+O\+W\+S}. 
 \begin{DoxyParams}{Параметри}
 {\em in\+File\+Name} & \mbox{[}in\mbox{]} Име улазне датотеке који се шифрује. \\
 \hline
@@ -356,7 +356,7 @@ t = \hyperlink{aes_8c_a4f1ca53c57b6d7a4661e804b46e32556}{CypherFileName}(t); \te
 \end{DoxyReturn}
 
 
-Дефиниција у линији 567 датотеке aes.\+c.
+Дефиниција у линији 568 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a04fa82fc5866faa97b820e9f610ac8a8}{\index{aes.\+h@{aes.\+h}!Decrypt\+State@{Decrypt\+State}}
 \index{Decrypt\+State@{Decrypt\+State}!aes.\+h@{aes.\+h}}
@@ -396,7 +396,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyWarning}
 
 
-Дефиниција у линији 440 датотеке aes.\+c.
+Дефиниција у линији 441 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a53000b729ca739f488c255eec26a83aa}{\index{aes.\+h@{aes.\+h}!Decypher\+A\+E\+S@{Decypher\+A\+E\+S}}
 \index{Decypher\+A\+E\+S@{Decypher\+A\+E\+S}!aes.\+h@{aes.\+h}}
@@ -442,7 +442,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyWarning}
 
 
-Дефиниција у линији 783 датотеке aes.\+c.
+Дефиниција у линији 795 датотеке aes.\+c.
 
 \hypertarget{aes_8h_af5e8e76552be6bdf6fc268e941e7d689}{\index{aes.\+h@{aes.\+h}!De\+Cypher\+File\+Name@{De\+Cypher\+File\+Name}}
 \index{De\+Cypher\+File\+Name@{De\+Cypher\+File\+Name}!aes.\+h@{aes.\+h}}
@@ -455,7 +455,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 
 Враћа име датотеке које ће имати након што се дешифрује. 
 
-Проверава да ли постоји датотека са истим именом као {\ttfamily $\ast$in\+File\+Name}. Ако постоји додаје насумичан број на почетак док дато име не буде постојало. Кад дужина имена са додатим насумичним бројем пређе дужину \hyperlink{aes_8h_a3fd5ab5d380936ded4f6cbe6fe24dca8}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N} додаје се број тако да се крај имена губи. {\ttfamily $\ast$in\+File\+Name} мора бити алоциран динамички. 
+Проверава да ли постоји датотека са истим именом као {\ttfamily $\ast$in\+File\+Name}. Ако постоји додаје насумичан број на почетак док дато име не буде постојало. Кад дужина путање до имена фајла са додатим насумичним бројем пређе дужину \hyperlink{aes_8h_a263efd24d550124313df51247f07457a}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+P\+A\+T\+H} додаје се број тако да се крај имена губи. {\ttfamily $\ast$in\+File\+Name} мора бити алоциран динамички. 
 \begin{DoxyParams}{Параметри}
 {\em in\+File\+Name} & \mbox{[}in/out\mbox{]} Име датотеке који се дешифрује. \\
 \hline
@@ -463,7 +463,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \begin{DoxyReturn}{Враћа}
 {\ttfamily 0} aко је све добро протекло.~\newline
  {\ttfamily 1} aко нема довољно меморије. ~\newline
- {\ttfamily 2} ако је првобитно прослеђено име веће од \hyperlink{aes_8h_a3fd5ab5d380936ded4f6cbe6fe24dca8}{M\+A\+X\+\_\+\+F\+I\+L\+E\+\_\+\+L\+E\+N} 
+ {\ttfamily 2} ако је путања неисправна (предугачко име прослеђено). 
 \begin{DoxyCode}
 \hyperlink{aes_8h_a36fec739165651cfd8d4d9306f2a3996}{UChar} *t = (\hyperlink{aes_8h_a36fec739165651cfd8d4d9306f2a3996}{UChar}*)malloc(5);
 t[0] = \textcolor{charliteral}{'\(\backslash\)0'};
@@ -474,7 +474,7 @@ strcat(t, \textcolor{stringliteral}{"tata"});
 \end{DoxyReturn}
 
 
-Дефиниција у линији 585 датотеке aes.\+c.
+Дефиниција у линији 592 датотеке aes.\+c.
 
 \hypertarget{aes_8h_ad7bd04e37ce32485ba137a85d8af1967}{\index{aes.\+h@{aes.\+h}!Encrypt\+State@{Encrypt\+State}}
 \index{Encrypt\+State@{Encrypt\+State}!aes.\+h@{aes.\+h}}
@@ -514,7 +514,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyWarning}
 
 
-Дефиниција у линији 373 датотеке aes.\+c.
+Дефиниција у линији 374 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a663692ae0b5723e1f91a93fdd5e07f8e}{\index{aes.\+h@{aes.\+h}!Inv\+Mix\+Columns@{Inv\+Mix\+Columns}}
 \index{Inv\+Mix\+Columns@{Inv\+Mix\+Columns}!aes.\+h@{aes.\+h}}
@@ -540,7 +540,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyParams}
 
 
-Дефиниција у линији 234 датотеке aes.\+c.
+Дефиниција у линији 235 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a0691b569c9d38deff434ba3b259916f1}{\index{aes.\+h@{aes.\+h}!Inv\+Shift\+Rows@{Inv\+Shift\+Rows}}
 \index{Inv\+Shift\+Rows@{Inv\+Shift\+Rows}!aes.\+h@{aes.\+h}}
@@ -565,7 +565,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyParams}
 
 
-Дефиниција у линији 120 датотеке aes.\+c.
+Дефиниција у линији 121 датотеке aes.\+c.
 
 \hypertarget{aes_8h_aa116f5c396e0ac94147ee711e24906af}{\index{aes.\+h@{aes.\+h}!Inv\+Sub\+Bytes@{Inv\+Sub\+Bytes}}
 \index{Inv\+Sub\+Bytes@{Inv\+Sub\+Bytes}!aes.\+h@{aes.\+h}}
@@ -591,7 +591,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyParams}
 
 
-Дефиниција у линији 78 датотеке aes.\+c.
+Дефиниција у линији 79 датотеке aes.\+c.
 
 \hypertarget{aes_8h_aaad97a014c1d5710dc99f1449d41cac1}{\index{aes.\+h@{aes.\+h}!Key\+Expansion@{Key\+Expansion}}
 \index{Key\+Expansion@{Key\+Expansion}!aes.\+h@{aes.\+h}}
@@ -628,7 +628,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyReturn}
 
 
-Дефиниција у линији 340 датотеке aes.\+c.
+Дефиниција у линији 341 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a390e2fa9bdb33429b8d8804a0cb53ce8}{\index{aes.\+h@{aes.\+h}!Mix\+Columns@{Mix\+Columns}}
 \index{Mix\+Columns@{Mix\+Columns}!aes.\+h@{aes.\+h}}
@@ -653,7 +653,7 @@ keyIn[] = \textcolor{stringliteral}{"\(\backslash\)x2b\(\backslash\)x7e\(\backsl
 \end{DoxyParams}
 
 
-Дефиниција у линији 143 датотеке aes.\+c.
+Дефиниција у линији 144 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a43ffbb16820017200bc8c9ccfc867db9}{\index{aes.\+h@{aes.\+h}!Read\+Data@{Read\+Data}}
 \index{Read\+Data@{Read\+Data}!aes.\+h@{aes.\+h}}
@@ -691,7 +691,7 @@ printf(\textcolor{stringliteral}{"Greska pri citanju\(\backslash\)n"});
 \end{DoxyReturn}
 
 
-Дефиниција у линији 523 датотеке aes.\+c.
+Дефиниција у линији 524 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a8a54c67c2e95fd6481a810f0d8ba8099}{\index{aes.\+h@{aes.\+h}!Rot\+Word@{Rot\+Word}}
 \index{Rot\+Word@{Rot\+Word}!aes.\+h@{aes.\+h}}
@@ -716,7 +716,7 @@ RotWor(&t); \textcolor{comment}{// t = 0x0100;}
 \end{DoxyParams}
 
 
-Дефиниција у линији 322 датотеке aes.\+c.
+Дефиниција у линији 323 датотеке aes.\+c.
 
 \hypertarget{aes_8h_ab2370c8f7e2864610060a618e32e0a39}{\index{aes.\+h@{aes.\+h}!Shift\+Rows@{Shift\+Rows}}
 \index{Shift\+Rows@{Shift\+Rows}!aes.\+h@{aes.\+h}}
@@ -741,7 +741,7 @@ RotWor(&t); \textcolor{comment}{// t = 0x0100;}
 \end{DoxyParams}
 
 
-Дефиниција у линији 97 датотеке aes.\+c.
+Дефиниција у линији 98 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a18cf3834d6b4ccee85ac6a39617e0582}{\index{aes.\+h@{aes.\+h}!Size\+Of\+File@{Size\+Of\+File}}
 \index{Size\+Of\+File@{Size\+Of\+File}!aes.\+h@{aes.\+h}}
@@ -772,7 +772,7 @@ RotWor(&t); \textcolor{comment}{// t = 0x0100;}
 \end{DoxyWarning}
 
 
-Дефиниција у линији 505 датотеке aes.\+c.
+Дефиниција у линији 506 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a521be23a2bb2cc37ba145760644baf49}{\index{aes.\+h@{aes.\+h}!State\+To\+U\+Int32@{State\+To\+U\+Int32}}
 \index{State\+To\+U\+Int32@{State\+To\+U\+Int32}!aes.\+h@{aes.\+h}}
@@ -804,7 +804,7 @@ t = \hyperlink{aes_8c_a521be23a2bb2cc37ba145760644baf49}{StateToUInt32}(state) \
 \end{DoxyNote}
 
 
-Дефиниција у линији 556 датотеке aes.\+c.
+Дефиниција у линији 557 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a77529d2c93011d18f738a210783f3362}{\index{aes.\+h@{aes.\+h}!Sub\+Bytes@{Sub\+Bytes}}
 \index{Sub\+Bytes@{Sub\+Bytes}!aes.\+h@{aes.\+h}}
@@ -830,7 +830,7 @@ t = \hyperlink{aes_8c_a521be23a2bb2cc37ba145760644baf49}{StateToUInt32}(state) \
 \end{DoxyParams}
 
 
-Дефиниција у линији 59 датотеке aes.\+c.
+Дефиниција у линији 60 датотеке aes.\+c.
 
 \hypertarget{aes_8h_ae42b375b0183763e33ef62fb03c41f4d}{\index{aes.\+h@{aes.\+h}!Sub\+Word@{Sub\+Word}}
 \index{Sub\+Word@{Sub\+Word}!aes.\+h@{aes.\+h}}
@@ -858,7 +858,7 @@ t = \hyperlink{aes_8c_ae42b375b0183763e33ef62fb03c41f4d}{SubWord}(t); \textcolor
 \end{DoxyReturn}
 
 
-Дефиниција у линији 326 датотеке aes.\+c.
+Дефиниција у линији 327 датотеке aes.\+c.
 
 \hypertarget{aes_8h_a8b5f3e5be9ef9141f608ea5f455c9045}{\index{aes.\+h@{aes.\+h}!U\+Char\+To\+U\+Int32@{U\+Char\+To\+U\+Int32}}
 \index{U\+Char\+To\+U\+Int32@{U\+Char\+To\+U\+Int32}!aes.\+h@{aes.\+h}}
@@ -886,7 +886,7 @@ t = \hyperlink{aes_8c_ae42b375b0183763e33ef62fb03c41f4d}{SubWord}(t); \textcolor
 \end{DoxyReturn}
 
 
-Дефиниција у линији 7 датотеке aes.\+c.
+Дефиниција у линији 8 датотеке aes.\+c.
 
 \hypertarget{aes_8h_abf754619bec46c9248838027681ac7c0}{\index{aes.\+h@{aes.\+h}!U\+Int32\+To\+State@{U\+Int32\+To\+State}}
 \index{U\+Int32\+To\+State@{U\+Int32\+To\+State}!aes.\+h@{aes.\+h}}
@@ -918,7 +918,7 @@ t = \hyperlink{aes_8c_ae42b375b0183763e33ef62fb03c41f4d}{SubWord}(t); \textcolor
 \end{DoxyNote}
 
 
-Дефиниција у линији 548 датотеке aes.\+c.
+Дефиниција у линији 549 датотеке aes.\+c.
 
 \hypertarget{aes_8h_af85d6c7d108f3d11a373b45e4d17907c}{\index{aes.\+h@{aes.\+h}!Write\+Data@{Write\+Data}}
 \index{Write\+Data@{Write\+Data}!aes.\+h@{aes.\+h}}
@@ -952,7 +952,7 @@ printf(\textcolor{stringliteral}{"Greska pri pisanju\(\backslash\)n"});
 \end{DoxyReturn}
 
 
-Дефиниција у линији 541 датотеке aes.\+c.
+Дефиниција у линији 542 датотеке aes.\+c.
 
 
 
